# gitar

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  demo.webm  flake.nix  justfile  release.sh
.cargo/: mutants.toml
.github/workflows/: book-test.yml  book.yml  ci.yml  coverage.yml  gh-pages.yml  release.yml
contracts/: validation.py  verify_git.sh  verify_github.py  verify_gitlab.py
contracts/git/: git_push_failure.txt  git_rebase_wrong_origin.txt  git_status_modified_files.txt  git_status_untracked_and_modified_files.txt  git_status_untracked_files.txt
contracts/github/: comment.json  get_user_by_username.json  get_user_info.json  list_issues_user.json  list_pipelines.json  list_releases.json  list_tags.json  list_user_gist.json  merge_request.json  merge_request_conflict.json  project.json  project_members.json  release_asset.json  stars.json  trending.html
contracts/gitlab/: approve_merge_request.json  ci_lint_error.json  ci_lint_ok.json  comment.json  create_auth_runner_response.json  get_registry_repository_tag.json  get_runner_details.json  get_user_by_username.json  get_user_info.json  gitlab-ci-simple.yml  list_pipelines.json  list_project_jobs.json  list_project_runners.json  list_registry_repositories.json  list_registry_repository_tags.json  list_release_assets.json  list_releases.json  list_tags.json  merge_request.json  merge_request_conflict.json  project.json  project_members.json  stars.json
doc/: book.toml
doc/src/: README.md  SUMMARY.md  caching.md  configuration.md  getting_started.md  installation.md  listing.md
doc/src/cmds/: amps.md  index.md  merge_request.md  pipeline.md
src/: api_defaults.rs  api_traits.rs  backoff.rs  browse.rs  cache.rs  cicd.rs  cli.rs  cmds.rs  config.rs  dialog.rs  display.rs  docker.rs  error.rs  exec.rs  git.rs  github.rs  gitlab.rs  http.rs  init.rs  io.rs  lib.rs  logging.rs  main.rs  merge_request.rs  project.rs  remote.rs  shell.rs  test.rs  time.rs
src/cache/: filesystem.rs  inmemory.rs  nocache.rs
src/cli/: amps.rs  browse.rs  cache.rs  cicd.rs  common.rs  docker.rs  init.rs  merge_request.rs  my.rs  project.rs  release.rs  star.rs  trending.rs  user.rs
src/cmds/: amps.rs  browse.rs  cache.rs  cicd.rs  common.rs  docker.rs  gist.rs  merge_request.rs  my.rs  project.rs  release.rs  trending.rs  user.rs
src/cmds/cicd/: mermaid.rs  yaml.rs
src/github/: cicd.rs  container_registry.rs  gist.rs  merge_request.rs  project.rs  release.rs  trending.rs  user.rs
src/gitlab/: cicd.rs  container_registry.rs  gist.rs  merge_request.rs  mr.rs  project.rs  release.rs  trending.rs  user.rs
src/http/: throttle.rs
src/remote/: query.rs
tests/: fail_msg_to_stderr.sh  fs_cache_test.rs  http_test.rs  read_config_test.rs  shell_test.rs
tests/fixtures/configs/invalid_domain/: gitar.toml
tests/fixtures/configs/invalid_toml/: gitar.toml
tests/fixtures/configs/ok/: gitar.toml
