[package]
name = "git-ar"
version = "1.1.3"
edition = "2021"

license = "MIT"
description = """
Git all remotes. Git cli tool that targets both Github and Gitlab. Brings common
development operations such as opening a pull request down to the shell.

This is an alternative to both Github https://github.com/cli/cli and Gitlab
https://gitlab.com/gitlab-org/cli cli tools.
"""

categories = ["command-line-utilities", "development-tools"]
keywords = ["git", "github", "gitlab", "cli", "vcs"]
repository = "https://github.com/jordilin/gitar"
readme = "README.md"
authors = ["Jordi Carrillo <jordilin@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "3.0.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
lazy_static = "1.5"
regex = "1.11.1"
sha2 = "0.10.8"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
console = "0.15.11"
clap = { version = "4.5.32", features = ["derive", "wrap_help"] }
open = "5.3.2"
thiserror = "2.0.12"
anyhow = "1.0.97"
flate2 = "1.1.0"
derive_builder = "0.20.2"
chrono = "0.4.40"
csv = "1.3.1"
log = "0.4.26"
env_logger = "0.11.7"
yaml-rust2 = "0.10.0"
rand = "0.9.0"
paste = "1.0"
toml = "0.8.20"

[dev-dependencies]
# disable basic-cookies from httpmock - not needed
httpmock = { version = "0.7.0", default-features = false }
tempfile = "3.19.0"
filetime = "0.2"

[[bin]]
name = "gr"
path = "src/main.rs"

[lib]
name = "gr"
